--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,13 +1,27 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-title>Sign In</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <div class="ion-padding">
+    <ion-input
+      placeholder="Username"
+      [(ngModel)]="username"
+      (input)="onTextChanged()"
+    ></ion-input>
+    <ion-input
+      placeholder="Password"
+      type="password"
+      [(ngModel)]="password"
+      (input)="onTextChanged()"
+    ></ion-input>
+    @if (invalidInput) {
+      <ion-label color="danger">Enter a valid username and password.</ion-label>
+    }
+  </div>
+  <div class="ion-text-center">
+    <ion-button (click)="login()">Login</ion-button>
+  </div>
 </ion-content>
