--- a/src/app/pages/my-deliveries/my-deliveries.page.html
+++ b/src/app/pages/my-deliveries/my-deliveries.page.html
@@ -1,13 +1,18 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
     <ion-title>myDeliveries</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button (click)="presentPopover($event)">
+        <ion-icon slot="icon-only" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">myDeliveries</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-popover #popover [isOpen]="isOpen" (didDismiss)="isOpen = false">
+    <ng-template>
+      <ion-button fill="clear" (click)="logout()">Logout</ion-button>
+    </ng-template>
+  </ion-popover>
 </ion-content>
