--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,11 +1,11 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="all-deliveries">
-      <ion-icon name="play-circle"></ion-icon>
+      <ion-icon name="receipt"></ion-icon>
       All deliveries
     </ion-tab-button>
     <ion-tab-button tab="my-deliveries">
-      <ion-icon name="radio"></ion-icon>
+      <ion-icon name="car"></ion-icon>
       My deliveries
     </ion-tab-button>
   </ion-tab-bar>
