--- a/src/app/pages/delivery-details/delivery-details.page.html
+++ b/src/app/pages/delivery-details/delivery-details.page.html
@@ -60,4 +60,9 @@
     </ion-card-content>
   </ion-card>
 </ion-content>
-<ion-button expand="full">Accept</ion-button>
+<ion-button 
+  [disabled]="!isNextButtonEnabled"
+  (click)="onNextButtonClicked()"
+  expand="full">
+  {{ nextButtonLabel }}
+</ion-button>
